--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-bootstrap-switch": "^15.5.3",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.6.8",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.1",
