--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-sdk": "^2.1632.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "formik": "^2.4.6",
+    "i18next": "^23.11.5",
     "markdown-it": "^14.1.0",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
     "react-bootstrap-switch": "^15.5.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-intl": "^6.6.8",
     "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
